--- a/4DSTEM Explorer/Base.lproj/Main.storyboard
+++ b/4DSTEM Explorer/Base.lproj/Main.storyboard
@@ -301,7 +301,7 @@
                                     <nil key="toolTip"/>
                                     <size key="minSize" width="55" height="22"/>
                                     <size key="maxSize" width="70" height="27"/>
-                                    <textField key="view" verticalHuggingPriority="750" tag="1" id="wgz-pS-AtU">
+                                    <textField key="view" focusRingType="none" verticalHuggingPriority="750" tag="1" id="wgz-pS-AtU">
                                         <rect key="frame" x="0.0" y="14" width="55" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" bezelStyle="round" id="Kgu-9C-A9A">
@@ -447,7 +447,7 @@
                                                         <rect key="frame" x="1" y="1" width="267" height="118"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textField verticalHuggingPriority="750" fixedFrame="YES" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="aMy-NF-9gR">
+                                                            <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="aMy-NF-9gR">
                                                                 <rect key="frame" x="52" y="48" width="54" height="22"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" title="5" drawsBackground="YES" id="Sgr-8K-uMH">
@@ -460,7 +460,7 @@
                                                                     <action selector="detectorRadiusChanged:" target="XfG-lQ-9wD" id="gKv-i8-cPj"/>
                                                                 </connections>
                                                             </textField>
-                                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l4m-vg-bpK">
+                                                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l4m-vg-bpK">
                                                                 <rect key="frame" x="7" y="23" width="39" height="16"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Outer" id="7AO-k1-DRk">
@@ -469,7 +469,7 @@
                                                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                 </textFieldCell>
                                                             </textField>
-                                                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AN5-dg-408">
+                                                            <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AN5-dg-408">
                                                                 <rect key="frame" x="52" y="20" width="54" height="22"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" title="10" drawsBackground="YES" id="hyg-C0-ERG">
@@ -482,7 +482,7 @@
                                                                     <action selector="detectorRadiusChanged:" target="XfG-lQ-9wD" id="toI-Ch-Ox8"/>
                                                                 </connections>
                                                             </textField>
-                                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" id="5wp-Q9-Mwy">
+                                                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" id="5wp-Q9-Mwy">
                                                                 <rect key="frame" x="11" y="51" width="35" height="16"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Inner" id="5ME-pu-Xqe">
@@ -553,7 +553,7 @@
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="115" id="cFe-Vx-VtG"/>
                                                     </constraints>
                                                 </box>
-                                                <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-YH-H5V">
+                                                <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-YH-H5V">
                                                     <rect key="frame" x="13" y="454" width="35" height="16"/>
                                                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="(x, y)" placeholderString="(x, y)" id="Yfi-gJ-0oU">
                                                         <font key="font" metaFont="system"/>
@@ -561,7 +561,7 @@
                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                     </textFieldCell>
                                                 </textField>
-                                                <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="efJ-bw-Yl6">
+                                                <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="efJ-bw-Yl6">
                                                     <rect key="frame" x="13" y="214" width="74" height="16"/>
                                                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Value Label" placeholderString="value" id="Vri-Kc-Zza">
                                                         <font key="font" metaFont="system"/>
@@ -692,7 +692,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="392" height="58"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <comboBox verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YbR-4u-6Ud">
+                            <comboBox focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YbR-4u-6Ud">
                                 <rect key="frame" x="20" y="14" width="214" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="T2G-s3-OHA">
